fix: fix the z-index of the workspace page to show the navbar's tooltips

--- a/app/index.css
+++ b/app/index.css
@@ -1,2 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap');
 @import url('tldraw/tldraw.css');
+
+* {
+  --layer-panels: 10;
+}
